NSPClient Failover Kafka fix